--- a/04-switch-statements/package.json
+++ b/04-switch-statements/package.json
@@ -1,10 +1,18 @@
 {
     "name": "04-switch-statements",
     "version": "1.0.0",
-    "main": "index.js",
+    "main": "src/index.js",
     "scripts": {
-        "start": "node index.js",
-        "test": "No test specified."
+        "start": "node src/index.js",
+        "test": "jest",
+        "build": "babel src -d lib"
     },
-    "license": "MIT"
+    "license": "MIT",
+    "devDependencies": {
+        "@babel/cli": "^7.10.5",
+        "@babel/core": "^7.11.0",
+        "@babel/preset-env": "^7.11.0",
+        "babel-jest": "^26.2.2",
+        "jest": "^26.2.2"
+    }
 }
